--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,90 @@
+@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
+  width: 100vw;
+  overflow-x: hidden;
+  height: auto;
+  min-height: 100vh;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-size: 14px;
+  color: #555;
+  font-family: Karla, sans-serif;
+  font-weight: 400;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  clear: both;
+  color: #222;
+  font-family: Ubuntu !important;
+  font-weight: 600 !important;
+}
+
+.btn-primary-udana {
+  color: #fff;
+  background-color: #fbcd06;
+  border-radius: 8px;
+  transition: 0.3s;
+}
+
+.btn-primary-udana:hover {
+  background-color: #ffaf00 !important;
+  color: #fff !important;
+}
+
+.btn-primary-table {
+  color: #bbbbbb;
+  background-color: #2d2d2d;
+  border-radius: 8px;
+  transition: 0.3s;
+  padding: 8px;
+  width: 100%;
+  font-size: 20px;
+}
+
+.btn-primary-table:hover {
+  color: #bbbbbb;
+  background-color: #3f3d3d;
+}
+
+.btn-basic-udana,
+.btn-green-udana,
+.btn-primary-udana,
+.btn-red-udana,
+.btn-transparent-udana {
+  padding: 10px 20px !important;
+  margin: 12px 0 !important;
+}
+
+img {
+  border: none;
+  max-width: 100%;
+  height: auto;
+  width: 100%;
 }
