--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,7 @@
+.content-header {
+  padding: 0 3%;
+}
+
 .site-header.absolute {
   position: absolute;
   top: 0;
@@ -76,6 +80,7 @@
 
 .navbar-toggle.collapsed {
   margin-bottom: 0 !important;
+  margin-right: 0 !important;
 }
 
 .navbar-left {
@@ -99,13 +104,12 @@
 .navModal ul {
   padding: 10px;
   margin: 0 20px;
-  margin-top: 10px;
+  margin-top: 8px;
   background-color: #555;
 }
 
-.navModal li {
-  padding: 5px;
-  padding-top: 10px;
+.navModal .navModal1 li:nth-child(1) {
+  padding-top: 8px !important;
 }
 
 .navModal a {
@@ -117,6 +121,11 @@
 
 .navModal .btn-primary-udana {
   width: 100%;
+}
+
+.navbar-default .navbar-toggle:focus,
+.navbar-default .navbar-toggle:hover {
+  background-color: transparent;
 }
 
 @media (min-width: 768px) {
@@ -139,5 +148,12 @@
   }
   .navbar-left {
     display: none !important;
+  }
+  .sideshow .sideshow-content h1 {
+    font-size: 32px !important;
+  }
+  .campaign-history .tabs-controls li a,
+  .sideshow .sideshow-content .sideshow-description {
+    font-size: 14px !important;
   }
 }
