--- a/src/components/Slideshow/Slideshow.css
+++ b/src/components/Slideshow/Slideshow.css
@@ -56,4 +56,8 @@
   .sideshow {
     border-radius: 0 0 0 40px;
   }
+  .sideshow {
+    background-image: url("../../assets/hero-img-mobile.jpg");
+    background-size: cover;
+  }
 }
