--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -97,7 +97,7 @@
   display: flex;
   flex-direction: column;
   width: 100vw;
-  transition: 0.3;
+  transition-duration: 0.3s;
   text-align: start;
 }
 
@@ -132,7 +132,6 @@
   .navbar {
     border-radius: 4px;
   }
-
   .navbar-nav > li > a {
     padding-top: 15px;
     padding-bottom: 15px;
@@ -142,7 +141,7 @@
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 769px) {
   .navbar-right {
     display: none !important;
   }
